--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
 			<div class="form-title">
 				<h1>Resgistrate</h1>
 			</div>
-			<form action="" class="slider-form">
-				<input type="text" name="" id="" placeholder="Nombre">
-				<input type="email" name="" id="" placeholder="Correo">
-				<input type="password" name="" id="" placeholder="Contraseña">
+			<form action="enviar.php" method="post"class="slider-form">
+				<input type="text" name="name" id="" placeholder="Nombre">
+				<input type="email" name="mail" id="" placeholder="Correo">
 				<input type="button" value="Crear cuenta">
 			</form>
 		</div>
